--- a/TestMyApt/TestMyApt/Base.lproj/Main.storyboard
+++ b/TestMyApt/TestMyApt/Base.lproj/Main.storyboard
@@ -1,26 +1,105 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="o9E-Dx-TYS">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Root View Controller-->
+        <scene sceneID="Ym3-rB-ztj">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="JbP-Ac-kIj" customClass="ShotsTableViewController" customModule="TestMyApt" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" sectionHeaderHeight="28" sectionFooterHeight="28" id="5Xz-7B-We4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ShotsCell" rowHeight="90" id="O0B-cM-nvS" customClass="ShotTableViewCell" customModule="TestMyApt" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="90"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="O0B-cM-nvS" id="GYK-j5-MUD">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="89.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AlS-Da-KtD">
+                                            <rect key="frame" x="8" y="8" width="75" height="75"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="75" id="2Pl-df-zBg"/>
+                                                <constraint firstAttribute="height" constant="75" id="g7m-7h-QpW"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kfn-iK-DIb">
+                                            <rect key="frame" x="91" y="8" width="276" height="19.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Created at" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cxi-DM-Xhy">
+                                            <rect key="frame" x="91" y="63.5" width="276" height="19.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Views count" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Wm-fU-U0g">
+                                            <rect key="frame" x="91" y="37" width="276" height="19.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Kfn-iK-DIb" firstAttribute="trailing" secondItem="GYK-j5-MUD" secondAttribute="trailingMargin" id="3pi-a6-qel"/>
+                                        <constraint firstAttribute="bottom" secondItem="cxi-DM-Xhy" secondAttribute="bottom" constant="6.5" id="KfT-Dk-zGa"/>
+                                        <constraint firstItem="Kfn-iK-DIb" firstAttribute="leading" secondItem="AlS-Da-KtD" secondAttribute="trailing" constant="8" id="Nv1-f1-4wz"/>
+                                        <constraint firstItem="cxi-DM-Xhy" firstAttribute="leading" secondItem="AlS-Da-KtD" secondAttribute="trailing" constant="8" id="PJY-mn-GHc"/>
+                                        <constraint firstItem="AlS-Da-KtD" firstAttribute="leading" secondItem="GYK-j5-MUD" secondAttribute="leading" constant="8" id="Tej-QV-pIG"/>
+                                        <constraint firstItem="6Wm-fU-U0g" firstAttribute="top" secondItem="Kfn-iK-DIb" secondAttribute="bottom" constant="9.5" id="bbp-h1-doF"/>
+                                        <constraint firstItem="AlS-Da-KtD" firstAttribute="top" secondItem="GYK-j5-MUD" secondAttribute="top" constant="8" id="c3F-Vn-rRa"/>
+                                        <constraint firstItem="Kfn-iK-DIb" firstAttribute="top" secondItem="GYK-j5-MUD" secondAttribute="topMargin" id="ga3-6k-cjb"/>
+                                        <constraint firstItem="6Wm-fU-U0g" firstAttribute="leading" secondItem="AlS-Da-KtD" secondAttribute="trailing" constant="8" id="gkJ-7X-IGF"/>
+                                        <constraint firstAttribute="trailing" secondItem="cxi-DM-Xhy" secondAttribute="trailing" constant="8" id="iv9-eo-4iE"/>
+                                        <constraint firstItem="6Wm-fU-U0g" firstAttribute="trailing" secondItem="GYK-j5-MUD" secondAttribute="trailingMargin" id="l55-bm-a0z"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="createdAtShot" destination="cxi-DM-Xhy" id="onR-gk-e7u"/>
+                                    <outlet property="imageShot" destination="AlS-Da-KtD" id="mRN-MG-uHI"/>
+                                    <outlet property="titleShot" destination="Kfn-iK-DIb" id="fRH-Zz-f1l"/>
+                                    <outlet property="viewCountShot" destination="6Wm-fU-U0g" id="FVK-lk-ER8"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="JbP-Ac-kIj" id="cGa-Gb-Bw7"/>
+                            <outlet property="delegate" destination="JbP-Ac-kIj" id="OGI-Rn-g4g"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="k9n-3H-IDk"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5Av-nu-AnU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="325.60000000000002" y="151.57421289355324"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="84c-V6-OjT">
+            <objects>
+                <navigationController id="o9E-Dx-TYS" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="MdQ-Gv-oNV">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="JbP-Ac-kIj" kind="relationship" relationship="rootViewController" id="3jg-lv-CUd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YBE-Ag-aO6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-671" y="152"/>
         </scene>
     </scenes>
 </document>
