--- a/TestMyApt/TestMyApt/Base.lproj/Main.storyboard
+++ b/TestMyApt/TestMyApt/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -80,16 +81,23 @@
                             <outlet property="delegate" destination="JbP-Ac-kIj" id="OGI-Rn-g4g"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Dribbble Shots" id="k9n-3H-IDk"/>
+                    <navigationItem key="navigationItem" title="Dribbble Shots" id="k9n-3H-IDk">
+                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="1Io-Af-iVc">
+                            <color key="tintColor" red="0.52645145940000004" green="0.52645145940000004" blue="0.52645145940000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="refresh:" destination="JbP-Ac-kIj" id="teG-XJ-SHA"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Av-nu-AnU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="325.60000000000002" y="151.57421289355324"/>
         </scene>
-        <!--View Controller-->
+        <!--Detail Shot View Controller-->
         <scene sceneID="VAi-aL-tZq">
             <objects>
-                <viewController id="WkW-J5-wtt" sceneMemberID="viewController">
+                <viewController id="WkW-J5-wtt" customClass="DetailShotViewController" customModule="TestMyApt" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="nrq-w7-Ly5"/>
                         <viewControllerLayoutGuide type="bottom" id="Wez-8D-9uY"/>
@@ -97,12 +105,79 @@
                     <view key="view" contentMode="scaleToFill" id="CQj-4M-8xe">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KXL-5q-sRS">
+                                <rect key="frame" x="16" y="72" width="343" height="25.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <color key="textColor" red="0.52645145939086291" green="0.52645145939086291" blue="0.52645145939086291" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Xzd-Nw-YyV">
+                                <rect key="frame" x="0.0" y="112" width="375" height="193"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Xzd-Nw-YyV" secondAttribute="height" multiplier="375:193" id="miP-Ug-BLb"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IGc-G0-tgM">
+                                <rect key="frame" x="16" y="313" width="343" height="62.5"/>
+                                <string key="text">In the midst of Hurricane Harvey, I was feeling inspired and took a break from my digital designs for a brief moment—ended up with this fun doodle for this sweet state of mine. </string>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contador de Views: 6" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DUb-Kh-vYs">
+                                <rect key="frame" x="16" y="398" width="343" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contador de Comentários: 6" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gTf-XA-ePX">
+                                <rect key="frame" x="16" y="425" width="343" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20/06/1991" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w3Q-qk-78e">
+                                <rect key="frame" x="16" y="452" width="343" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" red="0.52645145940000004" green="0.52645145940000004" blue="0.52645145940000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Xzd-Nw-YyV" secondAttribute="trailing" id="0em-xl-zKB"/>
+                            <constraint firstItem="KXL-5q-sRS" firstAttribute="trailing" secondItem="CQj-4M-8xe" secondAttribute="trailingMargin" id="2kq-LY-VMQ"/>
+                            <constraint firstItem="DUb-Kh-vYs" firstAttribute="trailing" secondItem="CQj-4M-8xe" secondAttribute="trailingMargin" id="8sp-Rk-sNF"/>
+                            <constraint firstItem="w3Q-qk-78e" firstAttribute="top" secondItem="gTf-XA-ePX" secondAttribute="bottom" constant="9" id="B1m-Lu-v4b"/>
+                            <constraint firstItem="IGc-G0-tgM" firstAttribute="leading" secondItem="CQj-4M-8xe" secondAttribute="leadingMargin" id="CeC-gv-p86"/>
+                            <constraint firstItem="gTf-XA-ePX" firstAttribute="leading" secondItem="CQj-4M-8xe" secondAttribute="leadingMargin" id="EVL-71-4kI"/>
+                            <constraint firstItem="w3Q-qk-78e" firstAttribute="trailing" secondItem="CQj-4M-8xe" secondAttribute="trailingMargin" id="GMu-95-hzp"/>
+                            <constraint firstItem="Xzd-Nw-YyV" firstAttribute="leading" secondItem="CQj-4M-8xe" secondAttribute="leading" id="Mhj-BT-wGy"/>
+                            <constraint firstItem="IGc-G0-tgM" firstAttribute="top" secondItem="Xzd-Nw-YyV" secondAttribute="bottom" constant="8" id="QjR-FE-2MZ"/>
+                            <constraint firstItem="gTf-XA-ePX" firstAttribute="top" secondItem="DUb-Kh-vYs" secondAttribute="bottom" constant="9" id="bqf-8d-klq"/>
+                            <constraint firstItem="IGc-G0-tgM" firstAttribute="trailing" secondItem="CQj-4M-8xe" secondAttribute="trailingMargin" id="fAI-ln-n30"/>
+                            <constraint firstItem="KXL-5q-sRS" firstAttribute="top" secondItem="nrq-w7-Ly5" secondAttribute="bottom" constant="8" id="lsn-JB-fEd"/>
+                            <constraint firstItem="DUb-Kh-vYs" firstAttribute="leading" secondItem="CQj-4M-8xe" secondAttribute="leadingMargin" id="mAj-nY-VTo"/>
+                            <constraint firstItem="Xzd-Nw-YyV" firstAttribute="top" secondItem="KXL-5q-sRS" secondAttribute="bottom" constant="14.5" id="nkT-4Q-yfe"/>
+                            <constraint firstItem="w3Q-qk-78e" firstAttribute="leading" secondItem="CQj-4M-8xe" secondAttribute="leadingMargin" id="oA1-k0-acx"/>
+                            <constraint firstItem="KXL-5q-sRS" firstAttribute="leading" secondItem="CQj-4M-8xe" secondAttribute="leadingMargin" id="pzV-rR-aZV"/>
+                            <constraint firstItem="gTf-XA-ePX" firstAttribute="trailing" secondItem="CQj-4M-8xe" secondAttribute="trailingMargin" id="wvR-bi-mK2"/>
+                            <constraint firstItem="DUb-Kh-vYs" firstAttribute="top" secondItem="IGc-G0-tgM" secondAttribute="bottom" constant="22" id="zYG-4s-60s"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="Xzd-Nw-YyV" id="gv2-Cd-3y2"/>
+                        <outlet property="labelCountComment" destination="gTf-XA-ePX" id="KZf-lH-cZa"/>
+                        <outlet property="labelCountViews" destination="DUb-Kh-vYs" id="1QW-J0-suv"/>
+                        <outlet property="labelCreatedAt" destination="w3Q-qk-78e" id="igL-wI-QxW"/>
+                        <outlet property="labelDescription" destination="IGc-G0-tgM" id="ln0-kp-LNQ"/>
+                        <outlet property="labelTitle" destination="KXL-5q-sRS" id="4ZK-lG-w7V"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jyx-b7-2np" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1044" y="163"/>
+            <point key="canvasLocation" x="1044" y="162.3688155922039"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="84c-V6-OjT">
